k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-counsellor
  labels:
    app: student-counsellor
